fix overflow @ iphone size

--- a/src/styles/how-it-works/article-branches-urls.scss
+++ b/src/styles/how-it-works/article-branches-urls.scss
@@ -6,6 +6,8 @@
   @media (max-width: 810px) {
     align-items: center;
     flex-direction: column;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .h3 {
